force-app/main/default/objects/BREG_MassEmailSettings__mdt/BREG_MassEmailSettings__mdt.object-meta.xml
<CustomObject>
    <label>BREG Mass Email Settings</label>
    <pluralLabel>BREG Mass Email Settings</pluralLabel>
</CustomObject>