force-app/main/default/objects/BREG_MassEmailSettings__mdt/fields/breg_Apex_Data_Provider__c.field-meta.xml
<CustomField>
    <fullName>breg_Apex_Data_Provider__c</fullName>
    <description>Apex class name that implements the logic to fulfill email template merge fields</description>
    <inlineHelpText>Apex class name that implements the logic to fulfill email template merge fields</inlineHelpText>
    <label>Apex Data Provider</label>
    <length>80</length>
    <type>Text</type>
</CustomField>