force-app/main/default/objects/BREG_MassEmailSettings__mdt/fields/breg_Email_Template_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_Email_Template_Developer_Name__c</fullName>
    <label>Email Template Developer Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>