force-app/main/default/objects/BREG_MassEmailSettings__mdt/fields/breg_Task_Subject__c.field-meta.xml
<CustomField>
    <fullName>breg_Task_Subject__c</fullName>
    <label>Task Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>